prac 3 updated stuff

--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,28 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>SIT 725 Prac 2</title>
+        <title>SIT 725 Prac 3</title>
         <meta name="description" content="SIT 725 Prac 3">
         <meta name="author" content="SitePoint">
+
         <meta property="og:title" content="SIT 725 Prac 3">
         <meta property="og:type" content="website">
         <meta property="og:description" content="SIT 725 Prac 3">
+
+        <!-- compiled and minified css -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <!-- Custom stylesheet -->
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-       <h1>Welcome to SIT725</h1>
-       <h2>Practical 3</h2>
+        <h1 id="heading">Welcome to SIT725</h1>
+        <h2>Practical 3</h2>
+        <img src="images/dtn-ssi.png">
+        <button>Click Me</button>
+
+        <!-- Complied and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <!-- Custom JavaScript-->
+        <script src="js/scripts.js"></script>
     </body>
 </html>
