--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,36 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <!-- Custom stylesheet -->
         <link rel="stylesheet" href="css/styles.css">
+
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
-        <h1 id="heading">Welcome to SIT725</h1>
-        <h2>Practical 3</h2>
-        <img src="images/dtn-ssi.png">
-        <button>Click Me</button>
+        <nav>
+            <div class="nav-wrapper navbar-size">
+                <a href="#" class="brand-logo"> <img class="user-image-size" src="images/dtn-ssi.png" /> </a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a target="_blank" href="https://andreweymard.com">website</a></li>
+                </ul>
+            </div>
+        </nav>
 
+        <main class="main-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col s12 center-align">
+                        <h1 id="heading">Welcome to SIT725 Week 3</h1>
+                        <p class="flow-text">This is a decmo application that tries to use a few components from materialize and through this practical we try to have some fun with Materialize and its components</p>
+                    </div>
+                    <div class="col s12 center-align">
+                        <img class="materialboxed materialboxed-image" src="images/catana.png">
+                    </div>
+                    <div class="col s12 center-align">
+                        <a class="waves-effect waves-light btn click-me-button" id="clickMeButton"><i class="material-icons left">auto_fix_high</i>Click Me</a>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <!-- Complied and minified JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <!-- Custom JavaScript-->
