--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,26 @@
                         <a class="waves-effect waves-light btn click-me-button" id="clickMeButton"><i class="material-icons left">auto_fix_high</i>Click Me</a>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col s4 center-align">
+                        <div class="card">
+                            <div class="card-image waves-effect waves-block waves-light">
+                                <img class="activator" src="images/doggo.png">
+                            </div>
+                            <div class="card-content">
+                                <span class="card-title activator grey-text text-darken-4">Kitten<i class="material-icons right">more_vert</i></span>
+                                <p><a href="#">About this doggo</a></p>
+                            </div>
+                            <div class="card-revea">
+                                <span class="card-title grey-text text-darken-4">Kitten<i class="material-icons right">close</i></span>
+                                <p class="card-text">Hello there! I just wanted to say HI to you guys. See ya!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
+
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <!-- Complied and minified JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
